--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://usorfaitheloho.github.io/hng-task1",
   "name": "hng-task1",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +13,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
+   
   },
   "scripts": {
     "start": "react-scripts start",
